package ch.iet_gibb.oecoheat.utils;

/**
 * The ErrorMessage class provides error messages for the different classes in the application.
 *
 * @author Marjan Tomev
 * @version 1.0
 * @since 08.29.2024
 */
public class ErrorMessage {
    public static final String temperatureRange = "Temperature must be between 1 and 30 degrees Celsius.";
    public static final String heatedEnergyPerDayRange = "Heated energy per day must be greater than zero.";
    public static final String widthRange = "Width must be greater than zero.";
    public static final String heightRange = "Height must be greater than zero.";
    public static final String depthRange = "Depth must be greater than zero.";
    public static final String radiusRange = "Radius must be greater than zero.";
    public static final String volumeRange = "Volume must be greater than zero.";
}
