@startuml
abstract class ch.iet_gibb.oecoheat.models.Tank {
# String name
# double temperature
# double heatedEnergyPerDay
+ String getName()
+ void setName(String)
+ double getTemperature()
+ void setTemperature(double)
+ double getHeatedEnergyPerDay()
+ void setHeatedEnergyPerDay(double)
+ {abstract}double calculateStoredEnergy()
+ double calculateHeatingDays()
+ String toString()
}


class ch.iet_gibb.oecoheat.tests.CuboidTankTest {
- CuboidTank tank
~ void setUp()
~ void getName()
~ void setName()
~ void getWidth()
~ void setWidth()
~ void getHeight()
~ void setHeight()
~ void getDepth()
~ void setDepth()
~ void getTemperature()
~ void setTemperature()
~ void getHeatedEnergyPerDay()
~ void setHeatedEnergyPerDay()
~ void calculateStoredEnergy()
~ void calculateHeatingDays()
~ void calculateVolume()
}


class ch.iet_gibb.oecoheat.models.CylinderTank {
# double radius
# double height
+ double getRadius()
+ void setRadius(double)
+ double getHeight()
+ void setHeight(double)
+ double calculateVolume()
+ double calculateStoredEnergy()
+ double getTemperature()
+ void setTemperature(double)
+ double getHeatedEnergyPerDay()
+ void setHeatedEnergyPerDay(double)
+ double calculateHeatingDays()
+ String toString()
}


class ch.iet_gibb.oecoheat.models.CuboidTank {
# double width
# double height
# double depth
+ double getWidth()
+ void setWidth(double)
+ double getHeight()
+ void setHeight(double)
+ double getDepth()
+ void setDepth(double)
+ double calculateVolume()
+ double calculateStoredEnergy()
+ double getTemperature()
+ void setTemperature(double)
+ double getHeatedEnergyPerDay()
+ void setHeatedEnergyPerDay(double)
+ double calculateHeatingDays()
+ String toString()
}


class ch.iet_gibb.oecoheat.utils.Color {
+ {static} String ANSI_RESET
+ {static} String ANSI_GREEN
+ {static} String ANSI_YELLOW
+ {static} String ANSI_BLUE
+ {static} String ANSI_CYAN
+ {static} String ANSI_WHITE
- {static} String separator
+ {static} String tankSeparator
}

class ch.iet_gibb.oecoheat.application.HeatCalculatorApp {
+ {static} void main(String[])
}

class ch.iet_gibb.oecoheat.utils.ErrorMessage {
+ {static} String temperatureRange
+ {static} String heatedEnergyPerDayRange
+ {static} String widthRange
+ {static} String heightRange
+ {static} String depthRange
+ {static} String radiusRange
+ {static} String volumeRange
}

class ch.iet_gibb.oecoheat.tests.CylinderTankTest {
- CylinderTank tank
~ void setUp()
~ void getName()
~ void setName()
~ void getRadius()
~ void setRadius()
~ void getHeight()
~ void setHeight()
~ void getTemperature()
~ void setTemperature()
~ void getHeatedEnergyPerDay()
~ void setHeatedEnergyPerDay()
~ void calculateStoredEnergy()
~ void calculateHeatingDays()
}




ch.iet_gibb.oecoheat.models.Tank <|-- ch.iet_gibb.oecoheat.models.CylinderTank
ch.iet_gibb.oecoheat.models.Tank <|-- ch.iet_gibb.oecoheat.models.CuboidTank
@enduml